[package]
name = "div-int-procmacro"
version = "0.1.1"
edition = "2021"
authors = ["Mike Hordecki <mike@hordecki.com>"]
description = "Proc macro implementation for the div-int crate."
license = "MPL-2.0"
repository = "https://github.com/MHordecki/div-int"

[lib]
proc-macro = true

[dependencies]
litrs = "0.4.1"
proc-macro-error = { version = "1.0", default-features = false }
proc-macro2 = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
div-int = {path ="../div-int"}
