[package]
name = "div-int"
version = "0.1.2"
edition = "2021"
authors = ["Mike Hordecki <mike@hordecki.com>"]
description = "Rational numbers with a compile-time denominator."
license = "MPL-2.0"
repository = "https://github.com/MHordecki/div-int"
documentation = "https://docs.rs/div-int"
categories = ["data-structures", "no-std"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true, default-features = false }
div-int-procmacro = { version = "0.1.2", path="../div-int-procmacro"}
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
